# vmecpp

./: .gitignore  AGENTS.md  ASYMMETRIC_BUG_ANALYSIS.md  ASYMMETRIC_CONVERGENCE_ISSUE.md  ASYMMETRIC_CONVERGENCE_ISSUE_CRITICAL.md  ASYMMETRIC_FIX_COMPLETE.md  ASYMMETRIC_IMPLEMENTATION_COMPLETED.md  ASYMMETRIC_IMPLEMENTATION_STATUS.md  ASYMMETRIC_VALIDATION_REPORT.md  ASYMMETRIC_VALIDATION_STATUS.md  ASYMMETRIC_VALIDATION_SUMMARY.md  BENCHMARK.md  CLAUDE.md  CONVERGENCE_ANALYSIS_SUMMARY.md  FAIL.md  PRECISION_IMPROVEMENT_PLAN.md  TESTING.md  TODO.md  TODO2.md  TOKAMAK.md  analyze_asymmetric_debug.py  analyze_force_symmetrization.py  analyze_geometry_computation.py  analyze_jvmec_asymmetry.py  analyze_mhd_force_computation.py  asymmetric_debugging_summary.md  asymmetric_fix_summary.md  asymmetric_issue_summary.md  asymmetric_status_report.md  asymmetric_validation_summary.md  check_jvmec_2d_asymmetric.py  check_jvmec_dims.py  clean_commit_plan.md  compare_asymmetric_reference.py  comprehensive_jvmec_vmec_comparison_summary.py  comprehensive_validation.py  debug_asymmetric.py  debug_asymmetric_axis.py  debug_asymmetric_iteration.py  debug_asymmetric_minimal.py  (+100 more)
.claude/: CLAUDE.md
examples/data/: HELIOTRON_asym.json  input.up_down_asymmetric_tokamak
examples/data/test_indata2json/: input.HELIOTRON_asym
jvmec_extracted/: analyze_jvmec_transform.md  jvmec_fourier_transform_analysis.md
jvmec_extracted/descur/ex_bean_2d/: in_desc
jvmec_extracted/descur/ex_helias4_3d/: in_desc
scripts/: validate_asymmetric.py
src/vmecpp/: __init__.py  _util.py
src/vmecpp/cpp/vmecpp/test_data/: BUILD.bazel  HELIOTRON_asym.2008191.json  circular_tokamak.out.h5  input.simple_asym_tokamak  input.tok_asym  jxbout_cma_new.nc  solovev_asymmetric.json
src/vmecpp/cpp/vmecpp/vmec/: BUILD.bazel  BUILD_test.bazel  CMakeLists.txt  high_precision_forces.cc  high_precision_forces.h  high_precision_forces_test.cc
src/vmecpp/cpp/vmecpp/vmec/boundaries/: boundaries.cc  boundaries.h  guess_magnetic_axis.cc
src/vmecpp/cpp/vmecpp/vmec/fourier_asymmetric/: BUILD.bazel  CMakeLists.txt  asymmetric_debug_comparison.cc  compare_implementations_test.cc  converging_asymmetric_test.cc  detailed_jvmec_comparison.cc  detailed_jvmec_step_comparison.cc  fourier_asymmetric.cc  fourier_asymmetric.h  fourier_asymmetric_parity.cc  microscopic_jvmec_debug.cc  roundtrip_test.cc  test_convergence_sensitivity.cc  test_debug_output_comparison.cc
src/vmecpp/cpp/vmecpp/vmec/fourier_coefficients/: fourier_coefficients.cc
src/vmecpp/cpp/vmecpp/vmec/fourier_geometry/: fourier_geometry.cc
src/vmecpp/cpp/vmecpp/vmec/handover_storage/: handover_storage.cc
src/vmecpp/cpp/vmecpp/vmec/ideal_mhd_model/: BUILD.bazel  CMakeLists.txt  fourier_asymmetric.cc  fourier_asymmetric.h  ideal_mhd_model.cc  ideal_mhd_model.h
src/vmecpp/cpp/vmecpp/vmec/output_quantities/: output_quantities.cc
src/vmecpp/cpp/vmecpp/vmec/pybind11/: pybind_vmec.cc  vmec_indata_pywrapper.cc  vmec_indata_pywrapper.h
src/vmecpp/cpp/vmecpp/vmec/vmec/: BUILD.bazel  test_symmetric_quick.cc  vmec.cc  vmec_asymmetric_test.cc
tests/: test_asymmetric_cpp_conversion.py  test_asymmetric_first_iteration.py  test_asymmetric_model_creation.py  test_asymmetric_phase1.py  test_asymmetric_solver_init.py  test_init.py  test_simsopt_compat.py
(+6 files in other folders)
